--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,14 +3,17 @@
 }
 
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #ffffffc0;
+.open-mode__toggle {
+  background: #bdbbbb;
+  border: .5px solid #a1a0a0;
 }
 
+.toggle {
+  background: #bdbbbb;
+  border: .5px solid #a31010;
+}
+
+.toggled {
+  background: #bdbbbb;
+  border: .5px solid #004196;
+}
