--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,28 @@
 div.App{
   width: 100%
 }
+
+
+@media screen and (max-width: 950px){
+  .landing-b1{
+    width: 98vw !important;
+  }
+  .landing-b1 h1{
+    text-align: center;
+  }
+  .landing-b1 p{
+    display: none;
+  }
+  .landing-b1 form input{
+    width: 90vw !important;
+  }
+  .landing-b2{
+    width: 98vw !important;
+    flex-direction: column
+  }
+  .landing-b2 div{
+    width: 100% !important;
+    margin: 5vh auto;
+    height: 40vh !important
+  }
+}
