--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,11 +43,7 @@ div.App{
 
 /* IPAD */
 @media screen and (max-width: 900px){
-  .navbar div{
-    width: 70% !important;
-    justify-content: space-evenly;
-    font-size: 1.75rem;
-  }
+  
 
   /* HOME PAGE */
   .landing-b1{
@@ -141,8 +137,8 @@ div.App{
   }
 
   /* LOGIN & SIGNUP */
-  .login-pg {
-    width: 100vw!important;
+  .login-landing {
+    width: 80vw!important;
   }
   .login-pg img{
     display: none !important;
@@ -150,11 +146,11 @@ div.App{
   .login-pg div{
     margin: auto;
   }
-  .login-pg form{
-    padding: 0;
-    width: 100% !important;
+  .login-landing form input, .check-stylist {
+    width: 70% !important;
   }
-  .login-form h3{
+
+  /* .login-form h3{
     font-size: 3rem !important;
   }
   .check-stylist, .login-form p, a{
@@ -163,6 +159,11 @@ div.App{
   .login-form input, button{
     height: 40px !important;
     font-size: 1.25rem  !important;
+  } */
+
+  /* FORMS */
+  .edit-form{
+    width: 70vw !important;
   }
 }
 
